istio/install/kubernetes/bootcamp-ingress.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio
  namespace: istio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: istio.ch.innoq.io
    http:
      paths:
      - path: /
        backend:
          serviceName: istio-ingress
          servicePort: 80
